@@ -62,9 +62,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		  <groupId>org.mockito</groupId>
-		  <artifactId>mockito-inline</artifactId>
-		  <scope>test</scope>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<scope>test</scope>
 		</dependency>
 		<!-- Csrf https://stackoverflow.com/questions/25605373/unit-testing-controllers-with-csrf-protection-enabled-in-spring-security -->
 		<dependency>
@@ -131,16 +131,16 @@
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>com.querydsl</groupId>
-		  <artifactId>querydsl-apt</artifactId>
-		  <scope>provided</scope>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-apt</artifactId>
+			<scope>provided</scope>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>com.querydsl</groupId>
-		  <artifactId>querydsl-jpa</artifactId>
+			<groupId>com.querydsl</groupId>
+			<artifactId>querydsl-jpa</artifactId>
 		</dependency>
 	</dependencies>
 
@@ -160,23 +160,34 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			
+
 			<plugin>
-		      <groupId>com.mysema.maven</groupId>
-		      <artifactId>apt-maven-plugin</artifactId>
-		      <version>1.1.3</version>
-		      <executions>
-		        <execution>
-		          <goals>
-		            <goal>process</goal>
-		          </goals>
-		          <configuration>
-		            <outputDirectory>target/generated-sources/java</outputDirectory>
-		            <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
-		          </configuration>
-		        </execution>
-		      </executions>
-		    </plugin>
+				<groupId>com.mysema.maven</groupId>
+				<artifactId>apt-maven-plugin</artifactId>
+				<version>1.1.3</version>
+				<executions>
+					<execution>
+						<goals>
+							<goal>process</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>target/generated-sources/java</outputDirectory>
+							<processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+			<!-- troubleshooting https://stackoverflow.com/questions/23260057/the-forked-vm-terminated-without-saying-properly-goodbye-vm-crash-or-system-exi  -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
